contacts bg correct z-index 0

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -32,9 +32,9 @@
   height: 100% !important;
 }
 
-.body,
-html {
-  background: beige;
+html,
+body {
+  /* background: beige; */
   color: rgb(175, 34, 43);
   /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
@@ -45,6 +45,9 @@ html {
   min-height: 100vh;
   min-height: 100lvh;
   border: 2px solid rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  /* position: relative; */
 }
 
 body.dark-mode {
@@ -295,8 +298,10 @@ body.dark-mode {
   text-align: center;
   padding-bottom: 25px;
   border: var(--border-doted);
-  position: sticky;
+  /* position: sticky; */
+  margin-top: auto; /* відступ вниз stycky Що контенту мало */
 }
+
 /* 
 .footer::before {
   background: #062cea;
@@ -438,6 +443,10 @@ body.dark-mode {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  max-width: 50%;
+  gap: 10px 20px;
+  margin: auto;
+  /* flex-direction: column; */
 }
 
 /* ?CONTACTS */
@@ -447,6 +456,7 @@ body.dark-mode {
   height: 100vh;
   /*//// opacity: .5; */
   position: relative;
+  /* z-index: 2; */
   /* isolation: isolate; */
 }
 
@@ -461,7 +471,7 @@ body.dark-mode {
   height: 100vh;
   width: 100vw;
   inset: 0px 0px 0px 0px;
-  z-index: -1;
+  z-index: 1;
   /* inset: 135px; distance on parent to child element */
 }
 
